Use CLI utility classes.